Updated main page fixed navbar on load and font sizes on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -622,6 +622,10 @@ video {
   z-index: 60000 !important;
 }
 
+.z-\[999999999\] {
+  z-index: 999999999 !important;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem !important;
 }
@@ -702,8 +706,16 @@ video {
   height: 400px !important;
 }
 
+.h-\[600px\] {
+  height: 600px !important;
+}
+
 .h-\[95\%\] {
   height: 95% !important;
+}
+
+.h-auto {
+  height: auto !important;
 }
 
 .h-full {
@@ -746,6 +758,14 @@ video {
   width: 100% !important;
 }
 
+.w-screen {
+  width: 100vw !important;
+}
+
+.w-8\/12 {
+  width: 66.666667% !important;
+}
+
 .shrink-0 {
   flex-shrink: 0 !important;
 }
@@ -771,6 +791,10 @@ video {
 
 .flex-col {
   flex-direction: column !important;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse !important;
 }
 
 .flex-wrap {
@@ -839,6 +863,11 @@ video {
   row-gap: 1rem !important;
 }
 
+.gap-x-10 {
+  -moz-column-gap: 2.5rem !important;
+       column-gap: 2.5rem !important;
+}
+
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0 !important;
   margin-right: calc(2.5rem * var(--tw-space-x-reverse)) !important;
@@ -857,6 +886,12 @@ video {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse))) !important;
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0 !important;
+  margin-right: calc(1rem * var(--tw-space-x-reverse)) !important;
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse))) !important;
+}
+
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0 !important;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse)) !important;
@@ -867,24 +902,6 @@ video {
   --tw-space-x-reverse: 0 !important;
   margin-right: calc(2rem * var(--tw-space-x-reverse)) !important;
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse))) !important;
-}
-
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0 !important;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse))) !important;
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse)) !important;
-}
-
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0 !important;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse))) !important;
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse)) !important;
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0 !important;
-  margin-right: calc(1rem * var(--tw-space-x-reverse)) !important;
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse))) !important;
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -903,6 +920,18 @@ video {
   --tw-space-y-reverse: 0 !important;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse))) !important;
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse)) !important;
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0 !important;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse))) !important;
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse)) !important;
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0 !important;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse))) !important;
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse)) !important;
 }
 
 .self-end {
@@ -971,6 +1000,11 @@ video {
   background-color: rgb(0 0 0 / 0.4) !important;
 }
 
+.bg-blue-zodiac {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(14 41 68 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
@@ -998,11 +1032,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-cover {
@@ -1054,37 +1083,22 @@ video {
   padding-bottom: 1.25rem !important;
 }
 
+.py-6 {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
+}
+
 .py-8 {
   padding-top: 2rem !important;
   padding-bottom: 2rem !important;
 }
 
-.px-2 {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-}
-
-.px-4 {
-  padding-left: 1rem !important;
-  padding-right: 1rem !important;
-}
-
-.py-10 {
-  padding-top: 2.5rem !important;
+.pb-10 {
   padding-bottom: 2.5rem !important;
-}
-
-.py-2 {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
 }
 
 .pt-10 {
   padding-top: 2.5rem !important;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem !important;
 }
 
 .text-center {
@@ -1098,6 +1112,11 @@ video {
 .text-2xl {
   font-size: 1.5rem !important;
   line-height: 2rem !important;
+}
+
+.text-3xl {
+  font-size: 1.875rem !important;
+  line-height: 2.25rem !important;
 }
 
 .text-4xl {
@@ -1225,6 +1244,10 @@ video {
   opacity: 0 !important;
 }
 
+.opacity-100 {
+  opacity: 1 !important;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important;
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color) !important;
@@ -1309,6 +1332,8 @@ video {
   padding-right: 1.25rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(241 104 33 / var(--tw-text-opacity));
   transition-property: all;
@@ -1398,6 +1423,22 @@ video {
   border-color: rgb(241 104 33 / var(--tw-border-opacity));
 }
 
+.section_title {
+  margin-bottom: 1.25rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .section_title {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
@@ -1479,8 +1520,16 @@ video {
     margin-bottom: 1.25rem !important;
   }
 
+  .md\:mb-6 {
+    margin-bottom: 1.5rem !important;
+  }
+
   .md\:mr-16 {
     margin-right: 4rem !important;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem !important;
   }
 
   .md\:block {
@@ -1499,6 +1548,14 @@ video {
     height: 700px !important;
   }
 
+  .md\:h-\[25rem\] {
+    height: 25rem !important;
+  }
+
+  .md\:w-4\/12 {
+    width: 33.333333% !important;
+  }
+
   .md\:w-44 {
     width: 11rem !important;
   }
@@ -1513,10 +1570,6 @@ video {
 
   .md\:w-8\/12 {
     width: 66.666667% !important;
-  }
-
-  .md\:w-4\/12 {
-    width: 33.333333% !important;
   }
 
   .md\:grid-cols-2 {
@@ -1538,11 +1591,6 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse)) !important;
   }
 
-  .md\:py-20 {
-    padding-top: 5rem !important;
-    padding-bottom: 5rem !important;
-  }
-
   .md\:pb-20 {
     padding-bottom: 5rem !important;
   }
@@ -1550,6 +1598,16 @@ video {
   .md\:text-3xl {
     font-size: 1.875rem !important;
     line-height: 2.25rem !important;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem !important;
+    line-height: 2.5rem !important;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem !important;
+    line-height: 1 !important;
   }
 
   .md\:text-base {
@@ -1604,6 +1662,11 @@ video {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+  }
+
+  .lg\:gap-x-16 {
+    -moz-column-gap: 4rem !important;
+         column-gap: 4rem !important;
   }
 
   .lg\:text-2xl {
