--- a/input.css
+++ b/input.css
@@ -12,7 +12,7 @@
 }
 
 .button{
-    @apply px-5 py-2 border border-primary text-primary hover:bg-primary hover:text-white transition-all
+    @apply px-5 py-2 border border-primary text-primary hover:bg-primary hover:text-white transition-all text-sm
 }
 
 .btn_rounded_corner{
@@ -25,4 +25,8 @@
 
 .input {
     @apply border outline-none border-gray-300 px-3 py-2 text-base focus:border-primary
+}
+
+.section_title{
+    @apply text-black text-2xl md:text-4xl font-bold mb-5
 }
